--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,27 @@
 <header class="header">
-<div class="container">
-
-</div>
+  <div class="container">
+    <picture>
+      <source
+        srcset="
+          ./image/desctop/logo@desctop-1x.webp 1x,
+          ./image/desctop/logo@desctop-2x.webp 2x
+        "
+        media="(min-width: 320px)"
+      />
+    </picture>
+    <ul class="header__nav-list">
+      <li class="header__item">
+        <a class="header__text" href="#capable">Characteristics</a>
+      </li>
+      <li class="header__item">
+        <a class="header__text" href="#history">History</a>
+      </li>
+      <li class="header__item">
+        <a class="header__text" href="#reviews">Reviews</a>
+      </li>
+      <li class="header__item">
+        <a class="header__text" href="#bose-nc">Payment and delivery</a>
+      </li>
+    </ul>
+  </div>
 </header>
