--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,21 @@
 <header class="header">
-  <div class="container">
-    <picture>
-      <source
-        srcset="
-          ./image/desctop/logo@desctop-1x.webp 1x,
-          ./image/desctop/logo@desctop-2x.webp 2x
-        "
-        media="(min-width: 320px)"
-      />
-    </picture>
+  <div class="container header__box">
+    <a href="./index.html">
+      <picture>
+        <source
+          srcset="
+            ./image/desktop/bose-logo@desktop-1x.webp 1x,
+            ./image/desktop/bose-logo@desktop-2x.webp 2x
+          "
+        />
+        <img
+          class="header__logo"
+          alt=""
+          src="./image/desktop/boes-logo@desktop-1x.webp 1x"
+        />
+      </picture>
+    </a>
+
     <ul class="header__nav-list">
       <li class="header__item">
         <a class="header__text" href="#capable">Characteristics</a>
