--- a/src/partials/bose-ar.html
+++ b/src/partials/bose-ar.html
@@ -1,14 +1,17 @@
 <section class="bose-ar">
-    <div class="bose-ar__box">
-        <div class="bose-ar__boxes">
-<h2 class="bose-ar__title">BOSE AR</h2>
-<h3 class="bose-ar__text">Brand name technology</h3>
-<p class="bose-ar__content">Bose AR is a unique audio platform augmented reality, that opens before  you new facets of sound. It allows you 
-    to stay connected to the real world and immerse yourself in the virtual universe
-    at the same time.</p>
-        </div>
-        <div class="bose-ar__case">
-        <img class="bose-ar__photo" src="./image/desctop/bose-ar@desctop-1x.png" alt="woman with headphones">
+    <div class="container">
+        <div class="bose-ar__box">
+            <div class="bose-ar__boxes">
+                <h2 class="bose-ar__title">BOSE AR</h2>
+                <h3 class="bose-ar__text">Brand name technology</h3>
+                <p class="bose-ar__content">Bose AR is a unique audio platform augmented reality, that opens before you
+                    new facets of sound. It allows you
+                    to stay connected to the real world and immerse yourself in the virtual universe
+                    at the same time.</p>
+            </div>
+            <div class="bose-ar__case">
+                <img class="bose-ar__photo" src="./image/desktop/bose-ar@desktop-1x.webp" alt="woman-with-headphones">
+            </div>
         </div>
     </div>
 </section>
