--- a/src/partials/luxury.html
+++ b/src/partials/luxury.html
@@ -1,6 +1,7 @@
 <section class="luxury">
+    <div class="container">
     <h2 class="luxury__title">The luxury of silence</h2>
-    <img class="luxury__photo" src="./image/desctop/bg-luxury@desctop-1x.png" alt="luxury">
+    <img class="luxury__photo" src="./image/desktop/bg-luxury@desktop-1x.webp" alt="luxury">
     <div class="luxury__box">
         <div class="luxury__boxes">
             <h2 class="luxury__text">Maximum enjoyment</h2>
@@ -16,4 +17,5 @@
                 any volume level. You can be sure of no distortion and crystal clear at high and low frequencies.</p>
         </div>
     </div>
+</div>
 </section>
