--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,17 @@
 <footer class="footer">
-    <div class="container">
-            <ul class="footer__list">
-                <li class="footer__list-item">
-                    <a class="footer__link" >Characteristics</a>
-                </li>
+    <div class="footer__container">
+        <div class="footer__box">
+            <div class="footer__boxes">
+                <ul class="footer__list">
                     <li class="footer__list-item">
-                    <a class="footer__link">History</a>
-                </li>
+                        <a class="footer__link">Characteristics</a>
+                    </li>
                     <li class="footer__list-item">
-                    <a class="footer__link">Reviews</a>
-                </li>
+                        <a class="footer__link">History</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a class="footer__link">Reviews</a>
+                    </li>
                     <li class="footer__list-item">
                         <a class="footer__link">Payment and delivery</a>
                     </li>
@@ -17,8 +19,12 @@
                     </li>
                     <li class="footer__list-item">
                         <a class="footer__link">FAQ</a>
-                </li>
-            </ul>
-            <h3>8 (800) 111-11-11</h3>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__boxing">
+                <h3 class="footer__phone">8 (800) 111-11-11</h3>
+            </div>
+        </div>
     </div>
 </footer>
