--- a/src/partials/guarantees.html
+++ b/src/partials/guarantees.html
@@ -2,21 +2,44 @@
     <div class="container">
         <div class="guarantees__box">
             <div class="guarantees__boxes">
-                <img src="./image/desktop/guarantees@desktop-1x.webp" alt="headphones">
+                <picture>
+                    <source
+                      srcset="./image/desktop/guarantees@desktop-1x.webp 1x,
+                      ./image/desktop/guarantees@desktop-2x.webp 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./image/table/guarantees@table-1x.webp 1x,
+                      ./image/table/guarantees@table-2x.webp 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                    srcset="./image/phone/guarantees@phone-1x.webp 1x,
+                    ./image/phone/guarantees@phone-2x.webp 2x"
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="guarantees__photo"
+                      alt="headphones"
+                      src="./image/phone/guarantees@phone-1x.webp 1x"
+                    />
+                  </picture>
             </div>
             <div class="guarantees__case">
                 <h2 class="guarantees__title">Guarantees</h2>
-                <div class="guarantees__block">
+                <svg class="guarantees__icon" width="13" height="13">
+                    <use href="./image/desktop/symbol-defs.svg#icon-elipse"></use>
+                </svg>
                     <h3 class="guarantees__text">90 Day Money Back Guarantee</h3>
                     <p class="guarantees__content">If you are not 100% satisfied with a product, you can return it back
                         for a full refund.</p>
-                </div>
-                <div class="guarantees__element">
+                        <svg class="guarantees__icon" width="13" height="13">
+                            <use href="./image/desktop/symbol-defs.svg#icon-elipse"></use>
+                        </svg>
                     <h3 class="guarantees__text">1 year warranty</h3>
                     <p class="guarantees__content">Regardless of your country of residence,
                         if your headphones are broken, we will
                         send you new ones.</p>
-                </div>
             </div>
         </div>
     </div>
