--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,4 +7,5 @@
 @import "./sections/bose-ar";
 @import "./sections/guarantees";
 @import "./sections/history";
+@import "./sections/reviews";
 @import "./sections/footer";
