--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,19 @@
-<section>
+<section class="reviews">
     <div class="container slider">
         <div>
+            <ul class="reviews__fix">
+                <li class="reviews__box">
+                    <iframe width="853" height="480" src="https://www.youtube.com/embed/VqP11Ma_2Fk" title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </li>
+                <li>
+                    <h2 class="reviews__title">REVIEWS</h2>
+                    <h3 class="reviews__texted">Bose Сorporation</h3>
+                    <p class="reviews__text">Critically acclaimed for their powerful noise cancelling, astonishing sound, and unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help turn any space into the perfect place to listen to music, get work done, or just shut out the world for a few moments and relax. </p>
+                    <h3 class="reviews__minitext" > class="reviews__minisubtext">01 -</h3><h3>02 - 03 - 04</h3>
+                </li>
+            </ul>
+        </div>
+        <div>
             <ul>
                 <li>
                     <img src="" alt="">
@@ -26,18 +39,6 @@
                 </li>
             </ul>
         </div>
-        <div>
-            <ul>
-                <li>
-                    <img src="" alt="">
-                </li>
-                <li>
-                    <h2></h2>
-                    <h3></h3>
-                    <p></p>
-                    <h3><span></span></h3>
-                </li>
-            </ul>
-        </div>
+        
     </div>
 </section>
