--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,5 +2,13 @@
 @import "./base/common";
 @import "./sections/header";
 @import "./sections/hero";
-
+@import "./sections/premium";
+@import "./sections/capable";
+@import "./sections/luxury";
+@import "./sections/bose-ar";
+@import "./sections/guarantees";
+@import "./sections/history";
+@import "./sections/reviews";
+@import "./sections/faq";
+@import "./sections/bose-nc";
 @import "./sections/footer";
