--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,5 @@
 @import "./sections/reviews";
 @import "./sections/faq";
 @import "./sections/bose-nc";
+@import "./sections/feedback";
 @import "./sections/footer";
