--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,7 +21,7 @@
               ./image/table/hero-bose@table-2x.webp 2x" media="(min-width: 768px)" />
             <source srcset="./image/phone/hero-bose@phone-1x.webp 1x,
               ./image/phone/hero-bose@phone-2x.webp 2x" media="(max-width: 767px)" />
-            <img class="hero__image" alt=""
+            <img class="hero__img" alt=""
                 src="./image/phone/hero-bose@phone-1x.webp 1x" />
         </picture>
       </li>
