--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import "./sections/guarantees";
 @import "./sections/history";
 @import "./sections/reviews";
-@import "./sections/faq";
+@import "./sections/faq.scss";
 @import "./sections/bose-nc";
 @import "./sections/feedback";
 @import "./sections/footer";
