Make adaptive for sections history bose-ar guarantees luxury footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,10 +12,13 @@
                     <li class="footer__list-item">
                         <a class="footer__link">Reviews</a>
                     </li>
+                </ul>
+                <ul class="footer__lists">
                     <li class="footer__list-item">
                         <a class="footer__link">Payment and delivery</a>
                     </li>
-                    <li class="footer__list-item"><a class="footer__link">Store addresses</a>
+                    <li class="footer__list-item">
+                        <a class="footer__link">Store addresses</a>
                     </li>
                     <li class="footer__list-item">
                         <a class="footer__link">FAQ</a>
