--- a/src/sass/sections/_bose-ar.scss
+++ b/src/sass/sections/_bose-ar.scss
@@ -1,43 +1,99 @@
 .bose-ar {
+    padding-bottom: 52px;
+
+
+    @media screen and (min-width: 768px) {
+       padding-bottom: 100px;
+    }
+
+
+    @media screen and (min-width: 768px) {
+        padding-bottom: 170px;
+    }
 
 
     &__box {
         display: flex;
+        flex-direction: column;
+
+
+        @media screen and (min-width:768px) {
+            flex-direction: row;
+       gap: 60px; 
+        }
+
+
+        @media screen and (min-width:1200px) {
         gap: 170px;
+        }
     }
 
-    &__boxes {}
+    &__boxes {
+        padding-bottom: 32px;
+    }
 
     &__title {
         color: #E7E7E7;
-font-family: Gilroy;
-font-size: 54px;
-font-style: normal;
+font-size: 24px;
 font-weight: 600;
-line-height: 120%; /* 64.8px */
-letter-spacing: 1.08px;
+line-height: 120%;
+letter-spacing: 0.48px;
 text-transform: uppercase;
-margin-bottom: 50px;
-    }
+margin-bottom: 32px;
+
+
+
+@media screen and (min-width:768px) {
+    font-size: 32px;
+    letter-spacing: 0.6px;
+    
+}
+
+
+@media screen and (min-width:1200px) {
+    font-size: 54px;
+    letter-spacing: 1.08px;
+    margin-bottom: 50px;
+}
+}
+    
 
     &__text {
         color: #E7E7E7;
-font-family: Gilroy;
-font-size: 28px;
-font-style: normal;
+font-size: 20px;
 font-weight: 600;
 line-height: 125%; /* 35px */
-margin-bottom: 20px;
+margin-bottom: 16px;
+
+@media screen and (min-width:768px) {
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+
+
+@media screen and (min-width:1200px) {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
     }
 
     &__content {
         color: rgba(255, 255, 255, 0.80);
-font-family: Gilroy;
-font-size: 20px;
-font-style: normal;
+font-size: 14px;
 font-weight: 400;
 line-height: 145%; /* 29px */
-width: 380px;
+width: 280px;
+
+
+@media screen and (min-width:768px) {
+    font-size: 16px;
+    width: 294px;
+}
+
+@media screen and (min-width:1200px) {
+    font-size: 20px;
+    width: 380px;
+}
     }
 
     &__case {}
