--- a/src/sass/sections/_guarantees.scss
+++ b/src/sass/sections/_guarantees.scss
@@ -1,53 +1,145 @@
 .guarantees {
+    padding-bottom: 52px;
 
+
+    @media screen and (min-width: 768px) {
+       padding-bottom: 100px;
+    }
+
+
+    @media screen and (min-width: 768px) {
+        padding-bottom: 170px;
+    }
 
     &__box {
         display: flex;
-        gap: 150px;
+        flex-direction: column-reverse;
+
+
+        @media screen and (min-width:768px) {
+           flex-direction: row;
+            gap: 60px;
+            
+        }
+
+
+        @media screen and (min-width:1200px) {
+         gap: 150px;
+            
+        }
     }
 
-    &__boxes {}
+    &__boxes {
+        padding-top: 32px;
+    }
 
     &__case {}
 
+
+    &__photo{
+        width: 280px;
+    height: 268px;
+
+        
+        @media screen and (min-width:768px) {
+            width: 354px;
+               height: 442px;     
+                } 
+
+
+        @media screen and (min-width:1200px) {
+       width: 590px;
+        height: 565px; 
+               
+           }
+        
+    }
+
+
     &__title {
          color: #E7E7E7;
-        font-family: Gilroy;
-        font-size: 54px;
-        font-style: normal;
+        font-size: 24px;
         font-weight: 600;
-        line-height: 120%; /* 64.8px */
-        letter-spacing: 1.08px;
+        line-height: 120%;
+        letter-spacing: 0.48px;
         text-transform: uppercase;
-        padding-top: 25px;
+
+
+        @media screen and (min-width:768px) {
+            font-size: 30px;
+            letter-spacing: 0.6px;
+            
+        }
+
+
+        @media screen and (min-width:1200px) {
+            font-size: 54px;
+            letter-spacing: 1.08px;
+            padding-top: 25px; 
+        }
     }
 
     &__block {}
 
     &__text { 
         color: #E7E7E7;
-        font-family: Gilroy;
-        font-size: 28px;
-        font-style: normal;
+        font-size: 20px;
         font-weight: 600;
-        line-height: 125%; /* 35px */}
+        line-height: 125%;
+
+
+        @media screen and (min-width:768px) {
+            font-size: 20px;
+            
+        }
+
+
+        @media screen and (min-width:1200px) {
+            font-size: 28px;
+
+            
+        }
+    }
 
     &__content {
         margin-top: 20px;
         color: rgba(255, 255, 255, 0.80);
-font-family: Gilroy;
-font-size: 20px;
-font-style: normal;
+font-size: 14px;
 font-weight: 400;
-line-height: 145%; /* 29px */
+line-height: 145%;
+width: 280px;
+
+
+@media screen and (min-width:768px) {
+    font-size: 16px;
+    width: 294px;
+    
+}
+
+
+@media screen and (min-width:1200px) {
 width: 400px;
+font-size: 20px;
+}
     }
 
     &__icon{
-    margin-top: 50px;
+    margin-top: 24px;
     margin-bottom: 24px;
     fill: #DF3D3A;
 
+
+    @media screen and (min-width:768px) {
+        margin-top: 32px;
+        
+    }
+
+
+    @media screen and (min-width:1200px) {
+        margin-top: 50px;
+        margin-bottom: 24px;
+        
+    }
     }
 
 
