--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,11 +1,43 @@
 <section class="faq">
     <div class="container">
-<h2 class="faq__text">FAQ</h2>
-    <div class="faq__row">
-        <h3 class="faq__text-1-1">01</h3>
-        <p class="faq__text-1-2">How to pair with a mobile device?</p>
-        <button class="faq__button">?</button>
-    </div>
-    <br>
+        <h2 class="faq__subtitle">FAQ</h2>
+        <ul class="faq__list">
+            <li class="faq__item">
+                <p class="faq__numb">01</p>
+                <h3 class="faq__text-1">How to pair with a mobile device?</h3>
+                <div class="faq__box-1">
+                    <button class="faq__button" type="button">?</button>
+                </div>
+                <hr class="faq__line" />
+            </li>
+            <li class="faq__item">
+                <p class="faq__numb">02</p>
+                <h3 class="faq__text-2">
+                    What is the wireless range of the Bose NC 700?
+                </h3>
+                <div class="faq__box-2">
+                    <button class="faq__button" type="button">?</button>
+                </div>
+                <hr class="faq__line" />
+            </li>
+            <li class="faq__item">
+                <p class="faq__numb">03</p>
+                <h3 class="faq__text-3">
+                    How do I fold the Bose NC 700 headphones for storage?
+                </h3>
+                <div class="faq__box-3">
+                    <button class="faq__button" type="button">?</button>
+                </div>
+                <hr class="faq__line" />
+            </li>
+            <li class="faq__item">
+                <p class="faq__numb">04</p>
+                <h3 class="faq__text-4">Does the guarantee work internationally?</h3>
+                <div class="faq__box-4">
+                    <button class="faq__button" type="button">?</button>
+                </div>
+                <hr class="faq__line" />
+            </li>
+        </ul>
     </div>
 </section>
