--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,7 +11,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </li>
-                <li>
+                <li class="reviews__width">
                     <h2 class="reviews__title">REVIEWS</h2>
                     <h3 class="reviews__texted">Bose Сorporation</h3>
                     <p class="reviews__text">Critically acclaimed for their powerful noise cancelling, astonishing
@@ -28,8 +28,12 @@
         <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
-                 <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y" title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </li>
-                <li>
+                    <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
+                        title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </li>
+                <li class="reviews__width">
                     <h2 class="reviews__title">REVIEWS</h2>
                     <h3 class="reviews__texted">Bose Сorporation</h3>
                     <p class="reviews__text">Bose Noise Cancelling Headphones 700 deliver everything you expect — and
@@ -51,10 +55,11 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </li>
-                <li>
+                <li class="reviews__width">
                     <h2 class="reviews__title">REVIEWS</h2>
                     <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Real stories of people tuning in or out to feel peace, find escape, and for self-care</p>
+                    <p class="reviews__text">Real stories of people tuning in or out to feel peace, find escape, and for
+                        self-care</p>
                     <div class="reviews__column-3">
                         <h3 class="reviews__minisubtext">01 - 02 -</h3>
                         <p class="reviews__s"> 03 -</p>
@@ -63,6 +68,5 @@
                 </li>
             </ul>
         </div>
-
     </div>
 </section>
