--- a/src/sass/sections/_reviews.scss
+++ b/src/sass/sections/_reviews.scss
@@ -1,15 +1,19 @@
 .reviews {
     margin-bottom: 170px;
-    margin-top: 170px;
 
     &__box {
-        width: 920px;
-        height: 590px;
+        // width: 920px;
+        // height: 590px;
         flex-shrink: 0;
         overflow: hidden;
+        margin-bottom: -30px;
         margin-right: 110px;
-         margin-left: -20px;
+        margin-left: -20px;
     }
+
+    // &__width {
+    //     margin-right: -500px;
+    // }
 
     &__title {
         color: #E7E7E7;
@@ -74,11 +78,11 @@
         line-height: 145%;
     }
 
-&__column-1 {
-    display: flex;
-    align-items: end;
-    height: 71px;
-}
+    &__column-1 {
+        display: flex;
+        align-items: end;
+        height: 41px;
+    }
 
     &__column-2 {
         display: flex;
@@ -86,20 +90,20 @@
         align-items: end;
     }
 
-&__column-3 {
-    display: flex;
-    height: 240px;
-    align-items: end;
-}
+    &__column-3 {
+        display: flex;
+        height: 240px;
+        align-items: end;
+    }
 
     &__fix {
         display: flex;
     }
 
     &__video {
-        width: 920px;
-            height: 590px;
-            flex-shrink: 0;
+        width: 820px;
+        height: 590px;
+        flex-shrink: 0;
     }
 }
 
